--- a/index.html
+++ b/index.html
@@ -5,12 +5,56 @@
     <title>LISTS</title>
      <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'> 
      <link href="https://fonts.googleapis.com/css?family=Muli|Roboto" rel="stylesheet">
-    <script src="jquery.js"></script>
-<script type="text/javascript" src="popup.js"></script>
+    
 <style type="text/css">
 
 
-div#preloader { position: fixed; left: 0; top: 0; z-index: 999; opacity: 0.4; width: 100%; height: 100%; overflow: visible; background: #333 url('http://files.mimoymima.com/images/loading.gif') no-repeat center center; }
+#preloader { 
+	height:100%;
+	position: absolute;
+	left: 50%;
+	z-index: 999;  
+	overflow: visible; 
+}
+#preloader-icon {
+	position:relative;
+	left: -50%;
+	top:40%;
+	border: 5px solid #f3f3f3;
+ 	border-radius: 50%;
+  	border-top: 5px solid #383c42;
+  	width: 50px;
+  	height: 50px;
+  	-webkit-animation: spin 1s linear infinite; /* Safari */
+  	animation: spin 1s linear infinite;
+}
+#preloader h1 {
+	position:relative;
+	left:-50%;
+}
+
+.fade {
+	-moz-animation   : fadeout 1s linear;
+	-webkit-animation: fadeout 1s linear;
+	animation        : fadeout 1s linear;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@keyframes fadeout {
+    0% {opacity:1;}
+    100% {opacity:0;}
+}
+ 
 
 
   a{
@@ -61,10 +105,15 @@ div#preloader { position: fixed; left: 0; top: 0; z-index: 999; opacity: 0.4; wi
 
 </head>
 <body>
+<div id="preloader">
+	<div id="preloader-icon"></div>
+</div>
 <div id="card_container">
 <center><h1 style="color: red;">LISTS loading </h1></center>
 <div style="height:120px;">
-<div id="preloader"></div></div>
+</div>
 </div>
 </body>
 </html>
+
+<script type="text/javascript" src="popup.js"></script>
